--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Hello World! I’m finchy. This is my website!</p>
+<p>This is my website to show off information about myself.</p>
 
 </body>
 </html>
