new abt me and contact

--- a/index.html
+++ b/index.html
@@ -39,32 +39,17 @@
             <div class= "part1">
                 <h2>About Me</h2></br>
                 <p>
-                    molestie massa suscipit. Fusce sit amet quam ligula. Proin eget diam sed sem molestie fringilla sed at elit.
-                    Etiam dapibus eget dolor at interdum. Nunc ac felis vitae metus vulputate interdum eu condimentum sapien.
-                    Fusce nec eros in ligula auctor euismod. Phasellus scelerisque turpis et nunc fringilla congue. Quisque
-                    egestas aliquet euismod. Donec porta risus non vestibulum ullamcorper. Suspendisse mi velit, gravida et urna
-                    eget, feugiat scelerisque orci. Aliquam vehicula feugiat est, a fringilla urna euismod ut. Morbi eu lectus
-                    augue. Pellentesque interdum consequat erat quis tincidunt. Pellentesque commodo dignissim urna accumsan
-                    euismod.
-                    In in dui maximus, lacinia turpis ut, lacinia urna. Vivamus vitae purus nec massa volutpat ultrices et vel
-                    velit. Nunc lacinia turpis id odio pellentesque, in vestibulum dui porta. Nulla molestie lacus ut ex finibus
-                    scelerisque. Aliquam erat volutpat. Nulla vel eros quis velit finibus eleifend. Maecenas massa felis, congue
-                    quis dapibus in, cursus id magna.
-                    Integer vehicula a quam at blandit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur
-                    ridiculus mus. In aliquet tortor a mauris rhoncus, nec elementum neque convallis. Donec accumsan enim at
-                    tellus venenatis, et pretium augue euismod. Vivamus nec ultrices libero. Nam facilisis ultricies diam ut
-                    efficitur. Ut lobortis erat vitae est maximus ultrices.
-                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Ut quis faucibus
-                    ligula. Aliquam venenatis nulla eu sodales feugiat. Proin ut libero sit amet ipsum vulputate pharetra. Morbi
-                    auctor rutrum elit, in luctus quam ultrices sit amet. Curabitur dolor metus, elementum a varius sed,
-                    consequat in elit. Maecenas id finibus ligula. Maecenas at facilisis felis. Sed tortor sapien, molestie in
-                    suscipit at, rutrum vitae tellus. In et ex mauris. Vestibulum vestibulum ultricies maximus.
-                    Aliquam arcu magna, dignissim quis ullamcorper ac, suscipit at massa. Vestibulum auctor arcu a neque
-                    sodales, eu aliquam arcu facilisis. Nulla laoreet vestibulum sem. Nulla feugiat a nisl in ultricies. Cras eu
-                    imperdiet sem. Pellentesque ut consequat quam. Pellentesque scelerisque, velit ut finibus pulvinar, diam
-                    justo rhoncus neque, ut interdum lorem felis in ex. Curabitur dignissim, lectus eu aliquet fringilla, metus
-                    elit convallis odio, a mattis lorem urna at metus. Mauris ligula justo, ultricies sit amet commodo non,
-                    faucibus ut magna.
+                    Howdy! I am a sophomore computer science major at Texas A&M University.
+                    I decided to create this website page to give people a quick and easy way to learn more about me.
+                    The reason I decided to study computer science is because of the instant gratification the programming enables.
+                    No other field is able to create something right in front of your eyes and then share it to the world.
+                    Apart from coding, my hobbies include video games, watching football (especially aggie football), and hanging with friends.
+                    And if you cannot tell from the background picture above, I also love Star Wars.
+                <br>
+                <br>
+                    Below I have listed a few of the projects I have worked on, both for school and independently.
+                    If you have any questions at all, or would like to see more, do not at all hesitate to reach out.
+                    
                 </p><br>
             </div>
             <a class="jumpPoint" id="jumpToProjects"></a>
@@ -103,32 +88,15 @@
             <div class="part3">
                 <h2>Contact</h2>
                 <p>
-                    molestie massa suscipit. Fusce sit amet quam ligula. Proin eget diam sed sem molestie fringilla sed at elit.
-                    Etiam dapibus eget dolor at interdum. Nunc ac felis vitae metus vulputate interdum eu condimentum sapien.
-                    Fusce nec eros in ligula auctor euismod. Phasellus scelerisque turpis et nunc fringilla congue. Quisque
-                    egestas aliquet euismod. Donec porta risus non vestibulum ullamcorper. Suspendisse mi velit, gravida et urna
-                    eget, feugiat scelerisque orci. Aliquam vehicula feugiat est, a fringilla urna euismod ut. Morbi eu lectus
-                    augue. Pellentesque interdum consequat erat quis tincidunt. Pellentesque commodo dignissim urna accumsan
-                    euismod.
-                    In in dui maximus, lacinia turpis ut, lacinia urna. Vivamus vitae purus nec massa volutpat ultrices et vel
-                    velit. Nunc lacinia turpis id odio pellentesque, in vestibulum dui porta. Nulla molestie lacus ut ex finibus
-                    scelerisque. Aliquam erat volutpat. Nulla vel eros quis velit finibus eleifend. Maecenas massa felis, congue
-                    quis dapibus in, cursus id magna.
-                    Integer vehicula a quam at blandit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur
-                    ridiculus mus. In aliquet tortor a mauris rhoncus, nec elementum neque convallis. Donec accumsan enim at
-                    tellus venenatis, et pretium augue euismod. Vivamus nec ultrices libero. Nam facilisis ultricies diam ut
-                    efficitur. Ut lobortis erat vitae est maximus ultrices.
-                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Ut quis faucibus
-                    ligula. Aliquam venenatis nulla eu sodales feugiat. Proin ut libero sit amet ipsum vulputate pharetra. Morbi
-                    auctor rutrum elit, in luctus quam ultrices sit amet. Curabitur dolor metus, elementum a varius sed,
-                    consequat in elit. Maecenas id finibus ligula. Maecenas at facilisis felis. Sed tortor sapien, molestie in
-                    suscipit at, rutrum vitae tellus. In et ex mauris. Vestibulum vestibulum ultricies maximus.
-                    Aliquam arcu magna, dignissim quis ullamcorper ac, suscipit at massa. Vestibulum auctor arcu a neque
-                    sodales, eu aliquam arcu facilisis. Nulla laoreet vestibulum sem. Nulla feugiat a nisl in ultricies. Cras eu
-                    imperdiet sem. Pellentesque ut consequat quam. Pellentesque scelerisque, velit ut finibus pulvinar, diam
-                    justo rhoncus neque, ut interdum lorem felis in ex. Curabitur dignissim, lectus eu aliquet fringilla, metus
-                    elit convallis odio, a mattis lorem urna at metus. Mauris ligula justo, ultricies sit amet commodo non,
-                    faucibus ut magna.
+                    Email addresses: hunter.finch@icloud.com (preferred)
+                    <br>
+                    hf9154@tamu.edu
+                    <br>
+                    <br>
+                    GitHub: githubaccount
+                    <br>
+                    <br>
+                    LinkedIn: linkedinaccount
                 </p>
             </div>
             </main>
