--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul id="navbar">
                     <li id= "about"><a href="#jumpToAboutMe">About Me</a></li>
                     <li id= "projects"><a href="#jumpToProjects">Projects</a></li>
-                    <li id= "contact"><a href="#jumptToContact">Contact</a></li>
+                    <li id= "contact"><a href="#jumpToContacts">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -54,35 +54,26 @@
             </div>
             <a class="jumpPoint" id="jumpToProjects"></a>
             <div class = "part2">
-                <h2>Projects</h2>
-                <p>
-                    molestie massa suscipit. Fusce sit amet quam ligula. Proin eget diam sed sem molestie fringilla sed at elit.
-                    Etiam dapibus eget dolor at interdum. Nunc ac felis vitae metus vulputate interdum eu condimentum sapien.
-                    Fusce nec eros in ligula auctor euismod. Phasellus scelerisque turpis et nunc fringilla congue. Quisque
-                    egestas aliquet euismod. Donec porta risus non vestibulum ullamcorper. Suspendisse mi velit, gravida et urna
-                    eget, feugiat scelerisque orci. Aliquam vehicula feugiat est, a fringilla urna euismod ut. Morbi eu lectus
-                    augue. Pellentesque interdum consequat erat quis tincidunt. Pellentesque commodo dignissim urna accumsan
-                    euismod.
-                    In in dui maximus, lacinia turpis ut, lacinia urna. Vivamus vitae purus nec massa volutpat ultrices et vel
-                    velit. Nunc lacinia turpis id odio pellentesque, in vestibulum dui porta. Nulla molestie lacus ut ex finibus
-                    scelerisque. Aliquam erat volutpat. Nulla vel eros quis velit finibus eleifend. Maecenas massa felis, congue
-                    quis dapibus in, cursus id magna.
-                    Integer vehicula a quam at blandit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur
-                    ridiculus mus. In aliquet tortor a mauris rhoncus, nec elementum neque convallis. Donec accumsan enim at
-                    tellus venenatis, et pretium augue euismod. Vivamus nec ultrices libero. Nam facilisis ultricies diam ut
-                    efficitur. Ut lobortis erat vitae est maximus ultrices.
-                    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Ut quis faucibus
-                    ligula. Aliquam venenatis nulla eu sodales feugiat. Proin ut libero sit amet ipsum vulputate pharetra. Morbi
-                    auctor rutrum elit, in luctus quam ultrices sit amet. Curabitur dolor metus, elementum a varius sed,
-                    consequat in elit. Maecenas id finibus ligula. Maecenas at facilisis felis. Sed tortor sapien, molestie in
-                    suscipit at, rutrum vitae tellus. In et ex mauris. Vestibulum vestibulum ultricies maximus.
-                    Aliquam arcu magna, dignissim quis ullamcorper ac, suscipit at massa. Vestibulum auctor arcu a neque
-                    sodales, eu aliquam arcu facilisis. Nulla laoreet vestibulum sem. Nulla feugiat a nisl in ultricies. Cras eu
-                    imperdiet sem. Pellentesque ut consequat quam. Pellentesque scelerisque, velit ut finibus pulvinar, diam
-                    justo rhoncus neque, ut interdum lorem felis in ex. Curabitur dignissim, lectus eu aliquet fringilla, metus
-                    elit convallis odio, a mattis lorem urna at metus. Mauris ligula justo, ultricies sit amet commodo non,
-                    faucibus ut magna.
-                </p> <br>
+                <h2>Projects</h2><br>
+                <div>
+                    <h4>Project 1</h4>
+                    <p>
+                        This is project one's description.
+                    </p><br>
+                </div>
+                <div>
+                    <h4>Project 2</h4>
+                    <p>
+                        This is project one's description.
+                    </p><br>
+                </div>
+                <div>
+                    <h4>Project 3</h4>
+                    <p>
+                        This is project one's description.
+                    </p><br>
+                </div>
+
             </div>
             <a class="jumpPoint" id="jumpToContacts"></a>
             <div class="part3">
@@ -93,10 +84,10 @@
                     hf9154@tamu.edu
                     <br>
                     <br>
-                    GitHub: githubaccount
+                    GitHub: <a id= "githubLink" target= "_blank" href = "https://github.com/hfinchy12">hfinchy12</a>
                     <br>
                     <br>
-                    LinkedIn: linkedinaccount
+                    LinkedIn: <a id = "linkedinLink" target= "_blank" href="https://www.linkedin.com/in/hunter-finch">hunter-finch</a>
                 </p>
             </div>
             </main>
