new font + projects

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <p>
                     Howdy! I am a sophomore computer science major at Texas A&M University.
                     I decided to create this website page to give people a quick and easy way to learn more about me.
-                    The reason I decided to study computer science is because of the instant gratification the programming enables.
-                    No other field is able to create something right in front of your eyes and then share it to the world.
+                    <!--The reason I decided to study computer science is because of the instant gratification the programming enables.
+                    No other field is able to create something right in front of your eyes and then share it to the world.-->
                     Apart from coding, my hobbies include video games, watching football (especially aggie football), and hanging with friends.
                     And if you cannot tell from the background picture above, I also love Star Wars.
                 <br>
@@ -54,23 +54,34 @@
             </div>
             <a class="jumpPoint" id="jumpToProjects"></a>
             <div class = "part2">
-                <h2>Projects</h2><br>
+                <h2 id= "projectsTitle">Projects</h2>
+                <h6 id= "projectsTitle">Available on github</h6><br>
                 <div>
-                    <h4>Project 1</h4>
+                    <h4>Dungeon Crawler</h4>
                     <p>
-                        This is project one's description.
+                        Dungeon Crawler is a game where the explorer must escape from the dungeon he is trapped in.
+                        Within the dungeon there are deadly monsters, treasures, and a few magical surprises.
+                        With a few different map choices, the dungeons can pose a challenge to even the most skilled explorers.
                     </p><br>
                 </div>
                 <div>
-                    <h4>Project 2</h4>
+                    <h4>Network Router Simulator</h4>
                     <p>
-                        This is project one's description.
+                        Simulated a network packet processing queue in C++. <br>
+                        This program reads in sample network packets and processes the packets into a linked list.
+                        This program uses: dynamic memory, linked list, queues, file input, classes, templating, and data filtering.
+                        Packets are read in through a txt file and then processesd to create a "NetworkPacket" object. 
+                        Those objects are then sorted based on their content as well as scanned for suspicious input/blocked addresses. 
+                        A linked list is used as the queue to demonstrate a "first-in first-out" approach to handling data. 
                     </p><br>
                 </div>
                 <div>
-                    <h4>Project 3</h4>
+                    <h4>Color Clicker</h4>
                     <p>
-                        This is project one's description.
+                        Color Clicker is game designed to test your vision and reaction time. 
+                        In this game, the player must click the cube that doesn't belong to the rest.
+                        While some may be obvious, others pose a true challenge. 
+                        Color Clicker is written in Python and uses the Pygame library.
                     </p><br>
                 </div>
 
