--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <a class="jumpPoint" id="jumpToProjects"></a>
             <div class = "part2">
                 <h2 id= "projectsTitle">Projects</h2>
-                <h6 id= "projectsTitle">Available on github</h6><br>
+                <h6 id= "projectsTitle">Available on GitHub</h6><br>
                 <div>
-                    <h4>Dungeon Crawler</h4>
+                    <h3>Dungeon Crawler</h3>
                     <p>
                         Dungeon Crawler is a game where the explorer must escape from the dungeon he is trapped in.
                         Within the dungeon there are deadly monsters, treasures, and a few magical surprises.
@@ -65,7 +65,7 @@
                     </p><br>
                 </div>
                 <div>
-                    <h4>Network Router Simulator</h4>
+                    <h3>Network Router Simulator</h3>
                     <p>
                         Simulated a network packet processing queue in C++. <br>
                         This program reads in sample network packets and processes the packets into a linked list.
@@ -76,7 +76,7 @@
                     </p><br>
                 </div>
                 <div>
-                    <h4>Color Clicker</h4>
+                    <h3>Color Clicker</h3>
                     <p>
                         Color Clicker is game designed to test your vision and reaction time. 
                         In this game, the player must click the cube that doesn't belong to the rest.
