--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
                 <h2 id= "projectsTitle">Projects</h2>
                 <h6 id= "projectsTitle">Available on GitHub</h6><br>
                 <div>
+                    <h3>Aggie Ticket Assistant</h3>
+                    <h6>Work in Progress</h6>
+                    <p>
+                        Working with a team to develop a mobile application to assist Aggies with pulling tickets for football games. 
+                        The main feature of this application is a ticket-pulling algorithm designed to ensure that students get the best seats possible.
+                        The application is meant to be easy to use while still being useful to us Aggies.
+                        Lots of other informations is also displayed to give Aggies the best game-day experience possible.
+                        <br><br>
+                        This application uses React Native, HTML, CSS, and Javascript for the front-end. 
+                        The back-end is made up of React Native, Javascript, and is supported by Firebase database.
+                        Our team is using Git/Github as a version control platform. 
+                    </p><br>
+                </div>
+                <div>
                     <h3>Dungeon Crawler</h3>
                     <p>
                         Dungeon Crawler is a game where the explorer must escape from the dungeon he is trapped in.
@@ -66,6 +80,7 @@
                 </div>
                 <div>
                     <h3>Network Router Simulator</h3>
+                    <h6>Assignment completed in CSCE 221: Data Structures and Algorithms</h6>
                     <p>
                         Simulated a network packet processing queue in C++. <br>
                         This program reads in sample network packets and processes the packets into a linked list.
@@ -82,6 +97,20 @@
                         In this game, the player must click the cube that doesn't belong to the rest.
                         While some may be obvious, others pose a true challenge. 
                         Color Clicker is written in Python and uses the Pygame library.
+                    </p><br>
+                </div>
+                <div>
+                    <h3>Hashing and Simplified Cryptocurrency</h3>
+                    <h6>Assignment completed in CSCE 221: Data Structures and Algorithms</h6>
+                    <p>
+                        This program inserts data into a hashtable using a polynomial rolling hash function. 
+                        Two different implementations of the hashtable are used to avoid collisions, the first being linear probing and the second being a chaining hashtable.
+                        The goal for this program is to create an even distribution of collisions.
+                        <br><br>
+                        The second half of this program is to use hashing to create s simplified version of a cryptocurrency blockchain.
+                        This applications reads in transactions (strings) from the command line to create a blockchain. 
+                        The transactions are then hashed and paired with a nonce to validate them according to the rules of the blockchain.
+                        The constraint for this blockchain is simple to allow for quick mining method.
                     </p><br>
                 </div>
 
