--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
             <a class="jumpPoint" id="jumpToProjects"></a>
             <div class = "part2">
                 <h2 id= "projectsTitle">Projects</h2>
-                <h6 id= "projectsTitle">Available on GitHub</h6><br>
                 <div>
                     <h3>Aggie Ticket Assistant</h3>
                     <h6>Work in Progress</h6>
@@ -68,36 +67,40 @@
                         This application uses React Native, HTML, CSS, and Javascript for the front-end. 
                         The back-end is made up of React Native, Javascript, and is supported by Firebase database.
                         Our team is using Git/Github as a version control platform. 
-                    </p><br>
+                    </p><br><br>
                 </div>
                 <div>
                     <h3>Dungeon Crawler</h3>
+                    <h6>Assignment completed in CSCE 121: Programming Design and Concepts</h6>
+                    <h6>Available on GitHub</h6>
                     <p>
                         Dungeon Crawler is a game where the explorer must escape from the dungeon he is trapped in.
-                        Within the dungeon there are deadly monsters, treasures, and a few magical surprises.
+                        Within the dungeon there are deadly monsters, treasures, and a couple of magical surprises.
                         With a few different map choices, the dungeons can pose a challenge to even the most skilled explorers.
-                    </p><br>
+                    </p><br><br>
                 </div>
                 <div>
                     <h3>Network Router Simulator</h3>
                     <h6>Assignment completed in CSCE 221: Data Structures and Algorithms</h6>
+                    <h6>Available on GitHub</h6>
                     <p>
                         Simulated a network packet processing queue in C++. <br>
                         This program reads in sample network packets and processes the packets into a linked list.
                         This program uses: dynamic memory, linked list, queues, file input, classes, templating, and data filtering.
-                        Packets are read in through a txt file and then processesd to create a "NetworkPacket" object. 
+                        Packets are read in through a text file and then processesd to create a "NetworkPacket" object. 
                         Those objects are then sorted based on their content as well as scanned for suspicious input/blocked addresses. 
                         A linked list is used as the queue to demonstrate a "first-in first-out" approach to handling data. 
-                    </p><br>
+                    </p><br><br>
                 </div>
                 <div>
                     <h3>Color Clicker</h3>
+                    <h6>Available on GitHub</h6>
                     <p>
                         Color Clicker is game designed to test your vision and reaction time. 
                         In this game, the player must click the cube that doesn't belong to the rest.
                         While some may be obvious, others pose a true challenge. 
                         Color Clicker is written in Python and uses the Pygame library.
-                    </p><br>
+                    </p><br><br>
                 </div>
                 <div>
                     <h3>Hashing and Simplified Cryptocurrency</h3>
