--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
                     <!--The reason I decided to study computer science is because of the instant gratification the programming enables.
                     No other field is able to create something right in front of your eyes and then share it to the world.-->
                     Apart from coding, my hobbies include video games, watching football (especially aggie football), and hanging with friends.
-                    And if you cannot tell from the background picture above, I also love Star Wars.
+                    And if you cannot tell from the background picture above, I love anything Star Wars.
                 <br>
                 <br>
                     Below I have listed a few of the projects I have worked on, both for school and independently.
+                    Some projects are available on my Github while some are kept private due to privacy. 
+                    However, if you would like to view the program please reach out and I will gladly share.
                     If you have any questions at all, or would like to see more, do not at all hesitate to reach out.
                     
                 </p><br>
