--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class= "part1">
                 <h2>About Me</h2></br>
                 <p>
-                    Howdy! I am a sophomore computer science major at Texas A&M University.
+                    Howdy! I am a junior computer science major at Texas A&M University.
                     I decided to create this website page to give people a quick and easy way to learn more about me.
                     <!--The reason I decided to study computer science is because of the instant gratification the programming enables.
                     No other field is able to create something right in front of your eyes and then share it to the world.-->
