--- a/index.html
+++ b/index.html
@@ -46,12 +46,9 @@
                 </ul>
 
             </nav>
-            <nav class="togglebutton">
+            <!-- <nav class="togglebutton">
                 <button class="toggle" onclick="toggleTheme()">Toggle!</button>
-                <!-- <ul class="toggle">
-                    <li><a href="#">Toggle!</a></li>
-                </ul> -->
-            </nav>
+            </nav> -->
         </div>
 
         <div class="about_wrapper">
