--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                 </ul>
 
             </nav>
-            <nav class="togglebutton">
-                <button class="toggle" onclick="toggleTheme()">Toggle!</button>
-            </nav>
+            
         </div>
 
         <div class="about_wrapper">
@@ -46,12 +44,12 @@
                     <div class="part1" id="part1id" role="article">
                         <h3>About Me</h3>
                         <p id="aboutmeid">
-                            Ever since I was young, I have been captivated by technology and its ability to make my life easier. Now I have reached the point in my life where I get to create software to fascinate others. Through my learning experiences, I have gotten to see how
-                            programs can take in simple data, and turn that into something useful - something that makes you say "woah that was cool". My education experiences have given me a mere glimpse of the power of data and algorithms, yet I understand
-                            I have hardly scratched the surface. Although I am not certain, I am currently interested in <a href="https://en.wikipedia.org/wiki/Machine_learning" target="_blank" id="MLlink">machine learning</a>                            and the endless opportunities that it can create. I am currently looking for an internship in software engineering to develop my technical skills, as well as refine my personal interest to choose a field of study to pursue
+                            Ever since I was young, I have been captivated by technology and its ability to make my life easier. Now I have 
+                            reached the point in my life where I get to create software to fascinate others. 
+                            I am currently looking for an internship in software engineering to develop my technical skills, as well as refine my personal interest to choose a field of study to pursue
                             full-time.
-                            <br><br> Apart from coding, I enjoy listening to music and anything outdoors (especially at the same). I hope to one day travel all across the world and visit the <a href="https://www.harpersbazaar.com/culture/travel-dining/g7171/most-beautiful-places-in-the-world/"
-                                target="_blank" id="MLlink">most beautiful places on earth</a>.
+                            <br><br> Apart from coding, I enjoy listening to music and anything outdoors (especially at the same). 
+                            I hope to one day travel all across the world and explore the most beautiful places on earth.
                         </p>
                     </div>
 
