--- a/projects_v2.html
+++ b/projects_v2.html
@@ -32,13 +32,13 @@
         <div class="hor_wrapper">
             <div class="infopanel" id="part1">
                 <div class="desc">
-                    <h2 class="pname">Aggie Ticket Assistant</h2>
+                    <h2 class="pname">Easy Order</h2>
+                    <h6>Assignment completed in CSCE 315: Programming Studio</h6>
                     <h6>Work in Progress</h6>
                     <p>
-                        Working with a team to develop a mobile application to assist Aggies with pulling tickets for football games. The main feature of this application is a ticket-pulling algorithm designed to ensure that students get the best seats possible. The application
-                        is meant to be easy to use while still being useful to us Aggies. Lots of other informations is also displayed to give Aggies the best game-day experience possible.
-                        <br><br> This application uses React Native, HTML, CSS, and Javascript for the front-end. The back-end is made up of React Native, Javascript, and is supported by Firebase database. Our team is using Git/Github as a version control
-                        platform.
+                        Working with a team to develop a point of sale (POS) system for an on-campus restaurant. There are two different phases of the project. The first phase is designing the product in Java, using Java Swing for the GUI. This version of the product was developed in the waterfall development cycle. 
+                        The second phase of the project was developed primarily in Javascript. The frontend was made up of React with HTML and CSS, while the backend was made using Express.js. A PostgreSQL database is also used for the backend. The second phase of the project was developed under the agile programming cycle, with three total sprints over seven weeks.
+                        <br><br> My role for this project was primarily on the backend, working with HTTP request and database queries. I also responsible for testing the product to ensure product safety and reliability.
                     </p>
                 </div>
             </div>
