--- a/skills.html
+++ b/skills.html
@@ -42,14 +42,19 @@
                         <li class="lang" id="l6">JavaScript</li>
                     </div>
                     <div id="bottomhalf">
-                        <li class="lang" id="l6">React Native</li>
+                        <li class="lang" id="l6">React</li>
                         <li class="lang" id="l6">Haskell</li>
                         <li class="lang" id="l6">R</li>
+                    </div>
+                    <div id="middlehalf">
+                        <li class="lang" id="l6">Express.js</li>
+                        <li class="lang" id="l6"></li>
+                        <li class="lang" id="l6">PostgreSQL</li>
                     </div>
                 </div>
                 <p id="langdesc3">Tools:</p>
                 <div class="tools">
-                    <li class="lang" id="l1">Visual Studio</li>
+                    <li class="lang" id="l1">VS Code</li>
                     <li class="lang" id="l2">Linux</li>
                     <li class="lang" id="l3">Microsoft Office</li>
                 </div>
